--- a/.gitignore
+++ b/.gitignore
@@ -23,12 +23,23 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
 
 # local env files
+*.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
 # vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+
+/studio/node_modules
+
+
+
 .vercel
