--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hashgraph/sdk": "^2.10.1",
     "@sanity/client": "^3.2.0",
+    "axios": "^0.26.1",
     "hashconnect": "^0.1.2",
     "next": "12.1.0",
     "react": "17.0.2",
