--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@hashgraph/sdk": "^2.10.1",
+    "@next-auth/firebase-adapter": "^0.1.2-pr.183-76202b42.8",
     "@sanity/client": "^3.2.0",
     "axios": "^0.26.1",
+    "firebase": "^9.6.8",
     "hashconnect": "^0.1.2",
     "next": "12.1.0",
+    "next-auth-sanity": "^1.3.0",
+    "nodemailer": "^6.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1"
@@ -30,6 +34,7 @@
     "eslint-config-prettier": "^8.5.0",
     "postcss": "^8.4.12",
     "prettier": "^2.6.0",
+    "prisma": "^3.11.0",
     "tailwindcss": "^3.0.23",
     "typescript": "4.6.2"
   }
