--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-config-prettier": "^8.5.0",
     "postcss": "^8.4.12",
     "prettier": "^2.6.0",
+    "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^3.0.23",
     "typescript": "4.6.2"
   }
